# webdsl

./: .classpath  .gitignore  .project  AUTHORS  BUILDTIME_XTC  INSTALL  Makefile  Makefile.am  Makefile.in  Makefile.xt  NOTICE  README  README.md  TODO  aclocal.m4  autoxt.m4  bootstrap  build.common.xml  build.generated.xml  build.main.xml  build.properties  build.xml  cleanall.sh  config.status  configure  configure.ac  dependencies.str  desugar.str  dr.str  externals.str  install.sh  java-Entity.str  java-front.m4  libtool  main.java  pil.m4  plugin.xml  release.nix  toc.sh  tojava.sh  (+7 more)
src/: Makefile  Makefile.am  Makefile.in  all.str  dsl-to-seam.str  fast-java-pp.c  file-management.str  gen-aterm.sh  get-stratego-jar.sh  java-pp-fake.str  libto-java-servlet.rtree.dep  libto-pil.rtree.dep  libto-py-gae.rtree.dep  libwebdsl-front.rtree.dep  libwebdsl-generator.rtree.dep  nano.str  nanoc.str  webdsl-config.str  webdsl-lsp.str  webdslc.c.dep  webdslc.str  x64-macosx-docker_implodePT  x64-macosx-docker_sdf2table
src/.deps/: libto_java_servlet_la-libto-java-servlet.Plo  libto_pil_la-libto-pil.Plo  libto_py_gae_la-libto-py-gae.Plo  libwebdsl_front_la-libwebdsl-front.Plo  libwebdsl_generator_la-libwebdsl-generator.Plo  webdslc.Po
src/domainmodel/: Blog.java  Makefile  README  build.xml  log4j.properties
src/separation/: dr.str
src/tests/: master.mod
test/: Makefile  Makefile.am  Makefile.in  Makefileservlet  action-test.nwl  blog-disambiguated.n.n.nwl  blog-disambiguated.n.nwl  blog-disambiguated.nwl  blog-minimal.nwl  blog.d.nwl  blog.nwl  broken.nwl  clean-servletapp-dirs.sh  cleanall.sh  compile  create.php  entity-test.nwl  example.nwl  expression-test.nwl  generatenix.sh  generatenix.sh.in  quickfailtest.sh  run  run-stratego-tests.sh  run-test-fail-servlet.sh  run-test-fail-servlet.sh.in  run-test-fail.sh  run-test-fail.sh.in  run-test-succeed-all-servlet.sh  run-test-succeed-all-servlet.sh.in  run-test-succeed-all.sh  run-test-succeed-all.sh.in  run-test-succeed-web-all.sh.in  run-test-succeed.sh  run.in  screenshots.nwl  template-test.nwl  test  webchecktests.nix
test/aspects/: ac.nwl  clean  compile-make  compile2  data.nwl  logging.nwl  main.nwl  make  pageac.nwl  pages.nwl  testsuite.php
test/fail/: For-template.app  ForCountStmt-action-2.app  ForCountStmt-action.app  ForFilter-where.app  ForFilterNoLimit-where.app  ForFilterNoOrderBy-where.app  ForFilterNoOrderByNoLimit-where.app  ForNoFilter-template.app  ForSep-template.app  ForSepNoFilter-template.app  ForStmt-action.app  ForStmtNoFilter-action.app  Limit-limit.app  Limit-offset.app  LimitNoLimit.app  LimitNoOffset.app  action-as-definition.app  action-assignment.app  action-return-inline.app  action-return.app  actioncalls.app.disabled  addinttostring.app  ajax-inline-template.app  ajax-template-nested.app  ajaxdoubleid.app  ajaxdoubleproperty.app  ajaxnonstringid.app  ajaxtemplate-2.app  ajaxtemplate.app  ajaxunknownid.app  assignment-exp.app  assignment-immutable-ref.app  assignment-type.app  attribute-collection.app  attributes.app  binop.app  boolexpint.app  built-in-functions.app  case-statement-template.app  collection-index-assign-index.app  (+199 more)
test/lsp/: application.ini  imported.app  run-no-cache.sh  run.sh  testapp.app
test/not-automated/: email-and-session.app  globalsconcurrent.app  login.app  manytomanyissue.app  onetooneissue.app
test/selective-recompilation/: application.ini  custom-compile-units.ini  limitations.txt  simple.app
test/succeed/: .dependencies.webdsl  action-inline-var.app  action.app  actioncancel.app  actionclosure.app  actionlink-ajax.app  actionlink.app  addinttostring.app  aggregate-query.app  ajax-action-return.app  ajax-placeholder-nested.app  ajax-placeholder.app  ajax-runscript-replace-in-function.app  ajax-select-onchange.app  ajax-selectfrom.app  ajaxaction-2.app  ajaxaction.app  ajaxinlineaction.app  ajaxinlineactiontemplate.app  ajaxinlineactiontemplate.app.fixme  ajaxinlinetemplate.app  ajaxinlinetemplate.app.disabled  ajaxinlinetemplateelements.app  all-function.app  allowed.app  assignment.app  attribute-collection-builtins-override.app  attribute-collection-ignore.app  attribute-collection.app  attributes.app  bool.app  bootstrap-basic-template.app  captcha.app  case-in-test.app  case-statement.app  case-template.app  collection-get.app  collection-remove.app  collectionfunctions.app  created-modified-generated-props.app  (+215 more)
test/succeed-web/: action-lookup-using-input-val-with-newline.app  action-page-sig-conflict.app  action-with-form.app  action-without-form.app  actionclosure.app  ajax-action-entity-id-anno-arg.app  ajax-action-page-param-passing.app  ajax-action-return-relocate-goto.app  ajax-button-form-submit.app  ajax-dynamic-form-placeholder-updates.app  ajax-dynamic-replace-ref-var-elements-issue.app  ajax-list-add-mark-persisted-issue.app  ajax-refresh-with-dynamic-form.app  ajax-refresh-without-dynamic-form.app  ajax-render-as-ajax-button-form-submit-request-var.app  ajax-replace-form.app  ajax-unique-ids.app  ajax-update-while-validate-fails.app  ajax-url-encoding.app  ajax-valid-json.app  ajax-validate-and-action.app  attributes-pass-on.app  bidirectional-onetoone.app  bool.app  built-in-html-wrappers.app  case-in-template-with-replace.app  change-comp-collection-inverse-prop.app  collection-of-collection.app  control-flow-caching.app  control-flow-tests.app  control-flow.app.disabled  delete-page-cache-update.app  derive-templates.app  derive-view-edit-rows-many-props.app  drop-unused-templates-test.app  elements-empty.app  elements-multiple-2.app  elements-multiple.app  elements.app  email-empty.app  (+122 more)
test/syntax/: Jsglr.java  README  acimportrules.sdf  acimportrules.txt  acrule.sdf  acrule.txt  action-.txt  action-0.txt  action.sdf  ajaxstatements-0.txt  ajaxstatements-1.txt  ajaxstatements-2.txt  ajaxstatements-3.txt  ajaxstatements-4.txt  ajaxstatements.sdf  attributes-0.txt  attributes-def-0.txt  attributes-def-1.txt  attributes-def-2.txt  attributes-def-3.txt  attributes-def.sdf  attributes-select-0.txt  attributes-select.sdf  css-style.sdf  (+230 more)
(+2250 files in other folders)
